Name:           gconf
Version:        0.10.5
License:        GPL
License-file:   COPYING
Copyright:      (c) 2001-2010 The Gtk2Hs Team
Author:         Duncan Coutts
Maintainer:     gtk2hs-users@sourceforge.net
Build-Type:     Custom
Cabal-Version:  >= 1.6
Stability:      stable
homepage:       http://www.haskell.org/gtk2hs/
bug-reports:    http://hackage.haskell.org/trac/gtk2hs/
Synopsis:       Binding to the GNOME configuration database system.
Description:    GConf is a configuration database system for storing application
                preferences. It supports default or mandatory settings set by the
                administrator, and changes to the database are instantly applied to all
                running applications. It is written for the GNOME desktop but doesn't
                require it.
Category:       System
Tested-With:    GHC == 6.12.1

x-Types-File:   System/Gnome/GConf/Types.chs
x-Types-ModName: System.Gnome.GConf.Types
x-Types-Forward:  Graphics.UI.GtkInternals

Source-Repository head
  type:         darcs
  location:     http://code.haskell.org/gtk2hs/
  subdir:       gconf

Library
        build-depends:  base >= 4, array, containers, haskell98, mtl,
                        glib >= 0.10.5 && < 0.11, 
                        gtk  >= 0.10.5 && < 0.11
						
        build-tools:    gtk2hsC2hs, gtk2hsHookGenerator, gtk2hsTypeGen
						
        exposed-modules:
          System.Gnome.GConf
          System.Gnome.GConf.GConfClient		  
        other-modules:
          System.Gnome.GConf.GConfValue
          System.Gnome.GConf.Types		  
          System.Gnome.GConf.Signals		  

        extensions:     ForeignFunctionInterface
		
        x-Types-Tag: gconf
        x-c2hs-Header:  gconf/gconf-client.h
        x-Signals-File:  System/Gnome/GConf/Signals.chs
        x-Signals-Modname: System.Gnome.GConf.Signals
        pkgconfig-depends: gconf-2.0 >= 2.0.0
