cabal-version:  3.0
Name:           gio
Version:        0.13.8.2
License:        LGPL-2.1-only
License-file:   COPYING
Copyright:      (c) 2001-2010 The Gtk2Hs Team
Author:         Peter Gavin, Andy Stewart
Maintainer:     gtk2hs-users@lists.sourceforge.net
Build-Type:     Custom
Stability:      stable
homepage:       http://projects.haskell.org/gtk2hs/
bug-reports:    https://github.com/gtk2hs/gtk2hs/issues
Synopsis:       Binding to GIO
Description:    GIO is striving to provide a modern, easy-to-use VFS API that sits at the right level in the library stack.
                The goal is to overcome the shortcomings of GnomeVFS and provide an API that is
                so good that developers prefer it over raw POSIX calls.
                Among other things that means using GObject.
                It also means not cloning the POSIX API, but providing higher-level, document-centric interfaces.
Category:       System
Tested-With:    GHC == 7.0.4, GHC == 7.2.2, GHC == 7.4.1
Extra-Source-Files: marshal.list
                    hierarchy.list

x-Types-File:      System/GIO/Types.chs
x-Types-ModName:   System.GIO.Types
x-Types-Import:    System.Glib.GObject
x-Types-Lib:       gio
x-Types-Prefix:    g
x-Types-Tag:       gio
x-Types-Hierarchy: hierarchy.list

Data-Dir:		demo
Data-Files:		Makefile
                FileManager.hs

Source-Repository head
  type:         git
  location:     https://github.com/gtk2hs/gtk2hs
  subdir:       gio

custom-setup
  setup-depends: base >= 4.6,
                 Cabal >= 2.0 && < 3.7,
                 gtk2hs-buildtools >= 0.13.2.0 && < 0.14

Library
        build-depends:  base >= 4 && < 5, array, containers, mtl, bytestring,
                        glib >= 0.13.0.0 && < 0.14

        exposed-modules:
          System.GIO
          System.GIO.Enums
          System.GIO.Types

          System.GIO.Async.AsyncResult
          System.GIO.Async.Cancellable

          System.GIO.File.AppInfo
          System.GIO.File.ContentType
          System.GIO.File.FileAttribute
          System.GIO.File.File
          System.GIO.File.FileEnumerator
          System.GIO.File.FileInfo
          System.GIO.File.FileMonitor
          System.GIO.File.IOError
          System.GIO.File.MountOperation

          System.GIO.Icons.Emblem
          System.GIO.Icons.EmblemedIcon
          System.GIO.Icons.FileIcon
          System.GIO.Icons.Icon
          System.GIO.Icons.ThemedIcon

          System.GIO.Volumes.Drive
          System.GIO.Volumes.Mount
          System.GIO.Volumes.Volume
          System.GIO.Volumes.VolumeMonitor
        other-modules:
          System.GIO.Signals

        default-language:   Haskell98
        default-extensions: ForeignFunctionInterface

        cpp-options:    -U__BLOCKS__ -Ubool -DGLIB_DISABLE_DEPRECATION_WARNINGS
        if os(darwin) || os(freebsd)
          cpp-options: -D_Nullable= -D_Nonnull= -D_Noreturn= -D__attribute__(x)=

        x-Signals-File:  System/GIO/Signals.chs
        x-Signals-Modname: System.GIO.Signals
        x-Signals-Types: marshal.list
        x-c2hs-Header:  gio/gio.h
        pkgconfig-depends: gio-2.0 >= 2.16.4
