Name:           glib
Version:        0.12.1
License:        LGPL-2.1
License-file:   COPYING
Copyright:      (c) 2001-2010 The Gtk2Hs Team
Author:         Axel Simon, Duncan Coutts
Maintainer:     gtk2hs-users@lists.sourceforge.net
Build-Type:     Custom
Cabal-Version:  >= 1.8
Stability:      stable
homepage:       http://projects.haskell.org/gtk2hs/
bug-reports:    http://hackage.haskell.org/trac/gtk2hs/
Synopsis:       Binding to the GLIB library for Gtk2Hs.
Description:    The GNU Library is a collection of C data structures and utility
                function for dealing with Unicode. This package only binds as
                much functionality as required to support the packages that
                wrap libraries that are themselves based on GLib.
Category:       System
Tested-With:    GHC == 6.10.4, GHC == 6.12.3, GHC == 7.0.4, GHC == 7.2.1
Extra-Source-Files:
                SetupWrapper.hs SetupMain.hs Gtk2HsSetup.hs
                System/Glib/hsgclosure.c
                System/Glib/hsgclosure.h

Source-Repository head
  type:         darcs
  location:     http://code.haskell.org/gtk2hs/
  subdir:       glib

Flag closure_signals
  Description:  Connect to signals using the Duncan way.


Library
        build-depends:  base >= 4 && < 5,
                        containers
        build-tools:    gtk2hsC2hs >= 0.13.5
        if flag(closure_signals)
          cpp-options:  -DUSE_GCLOSURE_SIGNALS_IMPL
          c-sources: System/Glib/hsgclosure.c
          include-dirs: System/Glib

        exposed-modules:  
                          System.Glib
                          System.Glib.GError
                          System.Glib.Properties
                          System.Glib.Attributes
                          System.Glib.Signals
                          System.Glib.MainLoop
                          System.Glib.GDateTime
                          System.Glib.GObject
                          System.Glib.Utils
                          System.Glib.StoreValue
                          System.Glib.FFI
                          System.Glib.Flags
                          System.Glib.UTFString
                          System.Glib.Types
                          System.Glib.GList
                          System.Glib.GString
                          System.Glib.GType
                          System.Glib.GTypeConstants
                          System.Glib.GValue
                          System.Glib.GValueTypes
                          System.Glib.GParameter
        extensions:     ForeignFunctionInterface
        x-c2hs-Header:  glib-object.h
        pkgconfig-depends: glib-2.0, gobject-2.0
