Name:           glib
Version:        0.13.7.1
License:        LGPL-2.1
License-file:   COPYING
Copyright:      (c) 2001-2010 The Gtk2Hs Team
Author:         Axel Simon, Duncan Coutts
Maintainer:     gtk2hs-users@lists.sourceforge.net
Build-Type:     Custom
Cabal-Version:  >= 1.24
Stability:      stable
homepage:       http://projects.haskell.org/gtk2hs/
bug-reports:    https://github.com/gtk2hs/gtk2hs/issues
Synopsis:       Binding to the GLIB library for Gtk2Hs.
Description:    GLib is a collection of C data structures and utility functions
                for the GObject system, main loop implementation, for strings and
                common data structures dealing with Unicode. This package only binds
                as much functionality as required to support the packages that
                wrap libraries that are themselves based on GLib.
Category:       System
Tested-With:    GHC == 7.0.4, GHC == 7.2.2, GHC == 7.4.1
Extra-Source-Files:
                System/Glib/hsgclosure.c
                System/Glib/hsgclosure.h

Source-Repository head
  type:         git
  location:     https://github.com/gtk2hs/gtk2hs
  subdir:       glib

Flag closure_signals
  Description:  Connect to signals using the Duncan way.

custom-setup
  setup-depends: base >= 4.6,
                 Cabal >= 1.24 && < 3.1,
                 gtk2hs-buildtools >= 0.13.2.0 && < 0.14

Library
        build-depends:  base >= 4 && < 5,
                        utf8-string >= 0.2 && < 1.1,
                        bytestring >= 0.9.1.10 && < 0.11,
                        text >= 1.0.0.0 && < 1.3,
                        containers
        cpp-options:    -U__BLOCKS__ -D__attribute__(A)=
        if os(darwin) || os(freebsd)
          cpp-options: -D_Nullable= -D_Nonnull= -D_Noreturn=
        if flag(closure_signals)
          cpp-options:  -DUSE_GCLOSURE_SIGNALS_IMPL
          c-sources: System/Glib/hsgclosure.c
          include-dirs: System/Glib

        exposed-modules:
                          System.Glib
                          System.Glib.GError
                          System.Glib.Properties
                          System.Glib.Attributes
                          System.Glib.Signals
                          System.Glib.MainLoop
                          System.Glib.GDateTime
                          System.Glib.GObject
                          System.Glib.Utils
                          System.Glib.StoreValue
                          System.Glib.FFI
                          System.Glib.Flags
                          System.Glib.UTFString
                          System.Glib.Types
                          System.Glib.GList
                          System.Glib.GString
                          System.Glib.GType
                          System.Glib.GTypeConstants
                          System.Glib.GValue
                          System.Glib.GValueTypes
                          System.Glib.GParameter
        default-language:   Haskell98
        default-extensions: ForeignFunctionInterface
        x-c2hs-Header:  glib-object.h
        pkgconfig-depends: glib-2.0, gobject-2.0
