Name:           gnomevfs
Version:        0.11.0
License:        GPL
License-file:   COPYING
Copyright:      (c) 2001-2010 The Gtk2Hs Team
Author:         Duncan Coutts
Maintainer:     gtk2hs-users@sourceforge.net
Build-Type:     Custom
Cabal-Version:  >= 1.6
Stability:      stable
homepage:       http://www.haskell.org/gtk2hs/
bug-reports:    http://hackage.haskell.org/trac/gtk2hs/
Synopsis:       Binding to the GNOME Virtual File System library.
Description:    GNOME VFS is the GNOME virtual file system.  It is the foundation of the
                Nautilus file manager.  It provides a modular architecture and ships with
                several modules that implement support for local files, http, ftp and others.
                It provides an URI-based API, a backend supporting asynchronous file
                operations, a MIME type manipulation library and other features.
				
Category:       System
Tested-With:    GHC == 6.12.1
Extra-Source-Files: hsgnomevfs-2.14.h
                    System/Gnome/VFS/hsfileinfo.h
                    Gtk2HsSetup.hs
                    marshal.list

x-Types-File:       System/Gnome/VFS/Types.chs
x-Types-Tag:        gnomevfs
x-Types-ModName:    System.Gnome.VFS.Types
x-Types-Forward:    Graphics.UI.GtkInternals
x-Types-Destructor: objectUnrefFromMainloop

Source-Repository head
  type:         darcs
  location:     http://code.haskell.org/gtk2hs/
  subdir:       gnomevfs

Library
        build-depends:  base >= 4 && < 5, array, containers, haskell98, mtl,
                        glib >= 0.11 && < 0.12,
                        gtk >= 0.11 && < 0.12
						
        build-tools:    gtk2hsC2hs, gtk2hsHookGenerator, gtk2hsTypeGen
						
        exposed-modules:
          System.Gnome.VFS
          System.Gnome.VFS.Cancellation        
          System.Gnome.VFS.Directory
          System.Gnome.VFS.Drive
          System.Gnome.VFS.Error
          System.Gnome.VFS.FileInfo
          System.Gnome.VFS.Init
          System.Gnome.VFS.MIME
          System.Gnome.VFS.Monitor
          System.Gnome.VFS.Ops
          System.Gnome.VFS.URI
          System.Gnome.VFS.Util
          System.Gnome.VFS.Volume
          System.Gnome.VFS.VolumeMonitor
          System.Gnome.VFS.Xfer
		  
        other-modules:
          System.Gnome.VFS.Types
          System.Gnome.VFS.Signals
          System.Gnome.VFS.BasicTypes
          System.Gnome.VFS.Marshal
          System.Gnome.VFS.Constants		  
		  
        extensions:     ForeignFunctionInterface
        c-sources: System/Gnome/VFS/hsfileinfo.c
		
        x-Signals-File:  System/Gnome/VFS/Signals.chs
        x-Signals-Modname: System.Gnome.VFS.Signals
        x-Signals-Types: marshal.list
        x-Signals-Import: Graphics.UI.GtkInternals
		
        x-c2hs-Header:  hsgnomevfs-2.14.h
        include-dirs:   System/Gnome/VFS/
        cpp-options:    -DHAVE_NEW_CONTROL_EXCEPTION
        pkgconfig-depends: gnome-vfs-2.0 >= 2.0.0, gnome-vfs-module-2.0 >= 2.0.0
